@@ -64,6 +64,7 @@ static atr_err can_create_attr(dbref player, dbref obj, char const *atr_name,
 static ATTR *find_atr_in_list(ATTR *atr, char const *name);
 static ATTR *atr_get_with_parent(dbref obj, char const *atrname, dbref *parent,
                                  int cmd);
+static bool can_debug(dbref player, dbref victim);
 
 /*======================================================================*/
 
@@ -1425,6 +1426,37 @@ use_attr(UsedAttr **prev, char const *name, uint32_t no_prog)
   return &prev[0]->next;
 }
 
+static bool
+can_debug(dbref player, dbref victim)
+{
+  ATTR *a;
+  char *aval, *dfl, *curr;
+  dbref member;
+  int success = 0;
+
+  if (controls(player, victim)) {
+    return 1;
+  }
+
+  a = atr_get(victim, "DEBUGFORWARDLIST");
+  if (!a) {
+    return 0;
+  }
+  aval = safe_atr_value(a);
+  dfl = trim_space_sep(aval, ' ');
+  while ((curr = split_token(&dfl, ' ')) != NULL) {
+    if (!is_objid(curr))
+      continue;
+    member = parse_objid(curr);
+    if (member == player) {
+      success = 1;
+      break;
+    }
+  }
+  free(aval);
+  return success;
+}
+
 /** Match input against a $command or ^listen attribute.
  * This function attempts to match a string against either the $commands
  * or ^listens on an object. Matches may be glob or regex matches,
@@ -1503,7 +1535,6 @@ atr_comm_match(dbref thing, dbref player, int type, int end, char const *str,
   pe_info = make_pe_info("pe_info-atr_comm_match");
   strcpy(pe_info->cmd_raw, str);
   strcpy(pe_info->cmd_evaled, str);
-
 
   skipcount = 0;
   do {
@@ -1635,7 +1666,7 @@ atr_comm_match(dbref thing, dbref player, int type, int end, char const *str,
               pe_regs_setenv_nocopy(pe_regs, i, args[i]);
             }
           }
-          if (from_queue && queue_type != QUEUE_DEFAULT) {
+          if (from_queue && (queue_type & ~QUEUE_DEBUG_PRIVS) != QUEUE_DEFAULT) {
             int pe_flags = PE_INFO_DEFAULT;
             if (!(queue_type & QUEUE_CLEAR_QREG)) {
               /* Copy parent q-registers into new queue */
@@ -1667,7 +1698,7 @@ atr_comm_match(dbref thing, dbref player, int type, int end, char const *str,
                                      tprintf("#%d/%s", thing, AL_NAME(ptr)));
           } else {
             /* Normal queue */
-            parse_que_attr(thing, player, s, pe_regs, ptr);
+            parse_que_attr(thing, player, s, pe_regs, ptr, (queue_type & QUEUE_DEBUG_PRIVS ? can_debug(player, thing) : 0));
           }
           pe_regs_free(pe_regs);
         }
@@ -1751,7 +1782,7 @@ one_comm_match(dbref thing, dbref player, const char *atr, const char *str,
     int success = 1;
     NEW_PE_INFO *pe_info;
 
-    if (from_queue && queue_type != QUEUE_DEFAULT) {
+    if (from_queue && (queue_type & ~QUEUE_DEBUG_PRIVS) != QUEUE_DEFAULT) {
       pe_info = from_queue->pe_info;
       /* Save and reset %c/%u */
       strcpy(save_cmd_raw, from_queue->pe_info->cmd_raw);
@@ -1764,7 +1795,7 @@ one_comm_match(dbref thing, dbref player, const char *atr, const char *str,
     if (!eval_lock_clear(player, thing, Command_Lock, pe_info)
         || !eval_lock_clear(player, thing, Use_Lock, pe_info))
       success = 0;
-    if (from_queue && queue_type != QUEUE_DEFAULT) {
+    if (from_queue && (queue_type & ~QUEUE_DEBUG_PRIVS) != QUEUE_DEFAULT) {
       /* Restore */
       strcpy(from_queue->pe_info->cmd_raw, save_cmd_raw);
       strcpy(from_queue->pe_info->cmd_evaled, save_cmd_evaled);
@@ -1778,7 +1809,7 @@ one_comm_match(dbref thing, dbref player, const char *atr, const char *str,
           pe_regs_setenv_nocopy(pe_regs, i, args[i]);
         }
       }
-      if (from_queue && queue_type != QUEUE_DEFAULT) {
+      if (from_queue && (queue_type & ~QUEUE_DEBUG_PRIVS) != QUEUE_DEFAULT) {
         /* inplace queue */
         int pe_flags = PE_INFO_DEFAULT;
         if (!(queue_type & QUEUE_CLEAR_QREG)) {
@@ -1811,7 +1842,7 @@ one_comm_match(dbref thing, dbref player, const char *atr, const char *str,
                                  tprintf("#%d/%s", thing, AL_NAME(ptr)));
       } else {
         /* Normal queue */
-        parse_que_attr(thing, player, s, pe_regs, ptr);
+        parse_que_attr(thing, player, s, pe_regs, ptr, (queue_type & QUEUE_DEBUG_PRIVS ? can_debug(player, thing) : 0));
       }
       pe_regs_free(pe_regs);
     }
